fix #69 via gitbook-plugin-auto-scroll-table
- <https://github.com/roboticslab-uc3m/teo-developer-manual/issues/69>

Horizontal scroll for tables if screen is too small

- Uses: <https://www.npmjs.com/package/gitbook-plugin-auto-scroll-table>
- Source: <https://github.com/ideamean/gitbook-plugin-auto-scroll-table>
- Similar proposal: <https://www.w3schools.com/howto/howto_css_table_responsive.asp>

--- a/styles/website.css
+++ b/styles/website.css
@@ -6,7 +6,3 @@
     content: "\00a0";
     margin-left: -24px;
 }
-
-.markdown-section {
-    overflow: initial;
-}
